@@ -33,4 +33,13 @@
     introduces a security risk, because it means that certificates cannot
     be verified to be those of known trusted hosts.
   </dd>
+
+  <dt><code>--ssl-server-name=</code><var>servername</var></dt>
+  <dd>
+    Specifies the server name to use for TLS Server Name Indication (SNI).
+    By default, the hostname from the connection string is used for SNI.
+    This option allows overriding the SNI hostname, which is useful when
+    connecting through proxies or service meshes where the connection endpoint
+    differs from the intended server name.
+  </dd>
 </dl>
