@@ -28,11 +28,13 @@ void stream_ssl_set_key_and_cert(const char *private_key_file,
 void stream_ssl_set_protocols(const char *arg);
 void stream_ssl_set_ciphers(const char *arg);
 void stream_ssl_set_ciphersuites(const char *arg);
+void stream_ssl_set_server_name(const char *server_name);
 
 #define SSL_OPTION_ENUMS \
         OPT_SSL_PROTOCOLS, \
         OPT_SSL_CIPHERS, \
-        OPT_SSL_CIPHERSUITES
+        OPT_SSL_CIPHERSUITES, \
+        OPT_SSL_SERVER_NAME
 
 #define STREAM_SSL_LONG_OPTIONS                     \
         {"private-key", required_argument, NULL, 'p'}, \
@@ -40,7 +42,8 @@ void stream_ssl_set_ciphersuites(const char *arg);
         {"ca-cert",     required_argument, NULL, 'C'}, \
         {"ssl-protocols", required_argument, NULL, OPT_SSL_PROTOCOLS}, \
         {"ssl-ciphers", required_argument, NULL, OPT_SSL_CIPHERS}, \
-        {"ssl-ciphersuites", required_argument, NULL, OPT_SSL_CIPHERSUITES}
+        {"ssl-ciphersuites", required_argument, NULL, OPT_SSL_CIPHERSUITES}, \
+        {"ssl-server-name", required_argument, NULL, OPT_SSL_SERVER_NAME}
 
 #define STREAM_SSL_OPTION_HANDLERS                      \
         case 'p':                                       \
@@ -65,10 +68,14 @@ void stream_ssl_set_ciphersuites(const char *arg);
                                                         \
         case OPT_SSL_CIPHERSUITES:                      \
             stream_ssl_set_ciphersuites(optarg);        \
+            break;                                      \
+                                                        \
+        case OPT_SSL_SERVER_NAME:                       \
+            stream_ssl_set_server_name(optarg);         \
             break;
 
 #define STREAM_SSL_CASES \
     case 'p': case 'c': case 'C': case OPT_SSL_PROTOCOLS: \
-    case OPT_SSL_CIPHERS: case OPT_SSL_CIPHERSUITES:
+    case OPT_SSL_CIPHERS: case OPT_SSL_CIPHERSUITES: case OPT_SSL_SERVER_NAME:
 
 #endif /* stream-ssl.h */
