@@ -74,6 +74,7 @@ static char *ca_cert_file;
 static char *ssl_protocols;
 static char *ssl_ciphers;
 static char *ssl_ciphersuites;
+static char *ssl_server_name;
 static bool bootstrap_ca_cert;
 
 /* Try to reclaim heap memory back to system after DB compaction. */
@@ -1793,6 +1794,7 @@ reconfigure_ssl(const struct shash *all_dbs)
     const char *resolved_ssl_protocols;
     const char *resolved_ssl_ciphers;
     const char *resolved_ssl_ciphersuites;
+    const char *resolved_ssl_server_name;
 
     resolved_private_key = query_db_string(all_dbs, private_key_file, &errors);
     resolved_certificate = query_db_string(all_dbs, certificate_file, &errors);
@@ -1801,12 +1803,15 @@ reconfigure_ssl(const struct shash *all_dbs)
     resolved_ssl_ciphers = query_db_string(all_dbs, ssl_ciphers, &errors);
     resolved_ssl_ciphersuites = query_db_string(all_dbs, ssl_ciphersuites,
                                                 &errors);
+    resolved_ssl_server_name = query_db_string(all_dbs, ssl_server_name,
+                                               &errors);
 
     stream_ssl_set_key_and_cert(resolved_private_key, resolved_certificate);
     stream_ssl_set_ca_cert_file(resolved_ca_cert, bootstrap_ca_cert);
     stream_ssl_set_protocols(resolved_ssl_protocols);
     stream_ssl_set_ciphers(resolved_ssl_ciphers);
     stream_ssl_set_ciphersuites(resolved_ssl_ciphersuites);
+    stream_ssl_set_server_name(resolved_ssl_server_name);
 
     return errors.string;
 }
@@ -2705,6 +2710,10 @@ parse_options(int argc, char *argv[],
 
         case OPT_SSL_CIPHERSUITES:
             ssl_ciphersuites = optarg;
+            break;
+
+        case OPT_SSL_SERVER_NAME:
+            ssl_server_name = optarg;
             break;
 
         case OPT_BOOTSTRAP_CA_CERT:
